--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 														<div class="ld-pf-details-inner" data-custom-animations="true" data-ca-options='{ "triggerHandler": "mouseenter", "triggerTarget": ".ld-pf-item", "triggerRelation": "closest", "offTriggerHandler": "mouseleave", "animationTarget": ".ld-pf-btn", "startDelay": 0, "duration": 650, "delay": 100, "initValues": { "scale": "0" }, "animations": { "scale": "1" } }'>
 								
 															<div class="ld-pf-btns">
-																<a href="./assets/demo/portfolio/kafel-kar ogarek small bathroom.jpg" class="ld-pf-btn circle ld-pf-btn-solid zoom fresco" data-fresco-group="ld-pf-1">
+																<a href="./assets/demo/portfolio/kafel-kar ogarek small bathroom.JPG" class="ld-pf-btn circle ld-pf-btn-solid zoom fresco" data-fresco-group="ld-pf-1">
 																	<span><i class="icon-ion-ios-search"></i></span>
 																</a>
 																<a href="#" class="ld-pf-btn ra circle ld-pf-btn-solid ml-2">
@@ -758,10 +758,10 @@
 									<h3 class="ld-tm-name">Michael Johnson</h3>
 									<h6 class="ld-tm-pos text-uppercase justify-content-center">Mechanical Engineer and Woodworker</h6>
 									<ul class="ld-tm-social social-icon mt-9">
+										<li><a href="https://www.instagram.com/alightstoves/" target="_blank"><i class="fa fa-instagram"></i></a></li>
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 										<li><a href="#"><i class="fa fa-behance"></i></a></li>
-										<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
 									</ul>
 								</div><!-- /.ld-tm-info -->
 							</div><!-- /.ld-tm -->
