--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
 												<div class="ld-pf-image">
 													<figure data-responsive-bg="true">
-														<img src="../assets/demo/portfolio/kafel-kar-ogarek-small-bathroom.jpg" alt="Portfolio">
+														<img src="./assets/demo/portfolio/kafel-kar-ogarek-small-bathroom.jpg" alt="Portfolio">
 													</figure>
 												</div><!-- /.ld-pf-image -->
 
@@ -531,7 +531,7 @@
 														<div class="ld-pf-details-inner" data-custom-animations="true" data-ca-options='{ "triggerHandler": "mouseenter", "triggerTarget": ".ld-pf-item", "triggerRelation": "closest", "offTriggerHandler": "mouseleave", "animationTarget": ".ld-pf-btn", "startDelay": 0, "duration": 650, "delay": 100, "initValues": { "scale": "0" }, "animations": { "scale": "1" } }'>
 								
 															<div class="ld-pf-btns">
-																<a href="../assets/demo/portfolio/kafel-kar-ogarek-small-bathroom.jpg" class="ld-pf-btn circle ld-pf-btn-solid zoom fresco" data-fresco-group="ld-pf-1">
+																<a href="./assets/demo/portfolio/kafel-kar-ogarek-small-bathroom.jpg" class="ld-pf-btn circle ld-pf-btn-solid zoom fresco" data-fresco-group="ld-pf-1">
 																	<span><i class="icon-ion-ios-search"></i></span>
 																</a>
 																<a href="#" class="ld-pf-btn ra circle ld-pf-btn-solid ml-2">
@@ -542,6 +542,7 @@
 														</div><!-- /.ld-pf-details-inner -->
 								
 													</div><!-- /.ld-pf-details -->
+												</div>
 
 											</div><!-- /.ld-pf-inner pos-rel -->
 
