--- a/index.html
+++ b/index.html
@@ -791,12 +791,7 @@
 				</div><!-- /.container -->
 			</section>
 
-
-
-
-
-
-			<section class="vc_row pt-70 pb-70 bg-cover" style="background-image: url(./assets/demo/Portfolio/alltogether.jpg);" data-parallax="true" data-parallax-options='{"parallaxBG": true}'>
+			<section class="vc_row pt-70 pb-70 bg-cover" style="background-image: url(./assets/demo/portfolio/alltogether.jpg);" data-parallax="true" data-parallax-options='{"parallaxBG": true}'>
 				<div class="container">
 					<div class="row">
 
@@ -812,15 +807,14 @@
 									data-ca-options='{"triggerHandler":"inview","animationTarget":".split-inner","duration":"1200","delay":"35","easing":"easeOutQuint","direction":"forward","initValues":{"translateX":2,"translateY":12,"rotateZ":6,"opacity":0},"animations":{"translateX":0,"translateY":0,"rotateZ":0,"opacity":1}}'
 									data-split-options='{"type":"chars, words"}'>
 									<span class="ld-fh-txt"> Contact me for any Alight Natural Heating product.<br />
-										<span style="color: #ffafa2">Join the Alight Natural Heating community.</span>
+										<span style="color: #ffafa2">Subscribe to the Alight Natural Heating community.</span>
 									</span>
 								</h2>
 							</div><!-- /.ld-fancy-heading -->
 
 						</div><!-- /.col-md-8 -->
-
-						<div class="lqd-column col-md-3 col-md-offset-1 text-center">
 							
+						<div class="lqd-column col-md-3 col-md-offset-1 text-center">
 							<a
 								href="#"
 								class="btn btn-solid btn-sm semi-round btn-gradient px-3 btn-block"
