--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
 									data-custom-animations="true"
 									data-ca-options='{"triggerHandler":"inview","animationTarget":".split-inner","duration":"1200","delay":"35","easing":"easeOutQuint","direction":"forward","initValues":{"translateX":2,"translateY":12,"rotateZ":6,"opacity":0},"animations":{"translateX":0,"translateY":0,"rotateZ":0,"opacity":1}}'
 									data-split-options='{"type":"chars, words"}'>
-									<span class="ld-fh-txt"> Contact me for any Alight Natural Heating product.<br />
+									<span class="ld-fh-txt"> Contact me for any Alight Natural Heating product questions.<br />
 										<span style="color: #ffafa2">Subscribe to the Alight Natural Heating community.</span>
 									</span>
 								</h2>
@@ -833,7 +833,7 @@
 									data-split-text="true"
 									data-custom-animations="true"
 									data-ca-options='{"triggerHandler":"inview","animationTarget":".split-inner","duration":700,"delay":100,"easing":"easeOutQuint","direction":"forward","initValues":{"scale":1},"animations":{"scale":1}}' data-split-options='{"type":"lines"}'>
-									<span class="ld-fh-txt"> Do you have a question?<br /> Ask here.</span>
+									<span class="ld-fh-txt"> Do you have a question?<br /> Please contact us via email or phone.</span>
 								</p>
 							</div><!-- /.ld-fancy-heading -->
 
