--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 								</div><!-- /.iconbox-icon-wrap -->
 								<div class="contents">
 									<h3 class="font-weight-semibold">Next-Gen Online Store</h3>
-									<p class="font-size-16 lh-165 text-fade-dark-04">Please browse our shopping gallery of different kind of natural heating products or email me for your natural heating product.</p>
+									<p class="font-size-16 lh-165 text-fade-dark-04">Please browse our shopping gallery of different kind of natural heating products or email me for your natural heating product reqeuest or idea.</p>
 								</div>
 
 							</div><!-- /.iconbox -->
@@ -393,7 +393,7 @@
 
 											<div class="liquid-img-container-inner">
 												<figure>
-													<img src="./assets/demo/banners/modernkachelofendesignframe1kaufmannkeramik-Ambiente1web.jpg" alt="Banner">
+													<img src="./assets/demo/banners/modernkachelofendesign.jpg" alt="Modern Kachelofen Design">
 												</figure>
 											</div><!-- /.liquid-img-container-inner -->
 
@@ -791,7 +791,7 @@
 				</div><!-- /.container -->
 			</section>
 
-			<section class="vc_row pt-70 pb-70 bg-cover" style="background-image: url(./assets/demo/portfolio/alltogether.jpg);" data-parallax="true" data-parallax-options='{"parallaxBG": true}'>
+			<section class="vc_row pt-70 pb-70 bg-cover" style="background-image: url(./assets/img/alltogether.png);" data-parallax="true" data-parallax-options='{"parallaxBG": true}'>
 				<div class="container">
 					<div class="row">
 
